--- a/physpi.html
+++ b/physpi.html
@@ -90,7 +90,7 @@
     }
     
     .bg{
-        background-image:url("IMG_2816.jpg");
+        background-image:url("IMG_2816.JPG");
         height:100%;
         background-position:center;
         background-repeat:no-repeat;
