--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
     }
     
     .bg{
-        background-image:url("IMG_2816.jpg");
+        background-image:url("IMG_2816.JPG");
         height:100%;
         background-position:center;
         background-repeat:no-repeat;
@@ -180,7 +180,7 @@
         <div class="container">
                 <a href="physpi.html"><div class="item">
                     <div class="hello">PhysPi</div>
-                    <img src="IMG_2679.jpg" alt="PhysPi" style="width:200px;height:150px;">
+                    <img src="IMG_2679.JPG" alt="PhysPi" style="width:200px;height:150px;">
                     <div class="bio">Laboratory Environmental Monitoring System using Raspberry Pi 3 and Arduino</div>
                     </div></a>
                 <div class="item"></div>
