--- a/physpi.html
+++ b/physpi.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="discoveryvip">
+    <link rel="shortcut icon" href="favicon.ico"/>
     <title>Keegan Osler</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">.-->
@@ -90,7 +91,7 @@
     }
     
     .bg{
-        background-image:url("IMG_2816.JPG");
+        background-image:url("IMG_2816.jpg");
         height:100%;
         background-position:center;
         background-repeat:no-repeat;
