formatting for mobile (except contact page)

--- a/workoutbuilder.html
+++ b/workoutbuilder.html
@@ -91,7 +91,7 @@
     }
     
     .bg{
-        background-image:url("IMG_2816.jpg");
+        background-image:url("IMG_2816.JPG");
         width:100%;
         height:100%;
         background-position:center;
@@ -198,7 +198,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html"><img src="logo.png" style="height:2em;"></a>
             <div class="topnav-right">
-                <a href="index.html" class="active">About</a>
+                <a href="index.html">About</a>
                 <a href="projects.html">Projects</a>
                 <a href="contact.html">Contact</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>     
@@ -206,10 +206,8 @@
 </div>
     <div class="bg">
         <div class="content">
-            <div class="hello">Hi there! I'm Keegan.</div>
-            <div class="bio">I am a freelance website developer currently based out of Calgary, AB. I am a full-stack developer specializing in Python and MySQL databasing on the backend.</div>
-            <div class="bio">While web building is my focus, I have a passion for all things development and am always up for a new project, whether it be a math-based game or a Raspberry Pi adventure.  My formal education is in physics and computer science which is where I developed a passion for integrating technology into real-world systems. Visit my <b><a href="projects.html">projects</a></b> page to see some of my previous work.</div>
-            <div class="bio">I am currently available for hire as both a developer and as a freelancer. Head over to my <b><a href="contact.html">contact</a></b> page to say hello!</div>
+            <div class="hello">Workout Routine Builder</div>
+            <div class="bio">This project page is coming soon!</div>
         </div>
     </div>
     <div class="footer">
