--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     }
     
     .bg{
-        background-image:url("IMG_2816.jpg");
+        background-image:url("IMG_2816.JPG");
         width:100%;
         height:100%;
         background-position:center;
