update intro section

--- a/index.html
+++ b/index.html
@@ -87,16 +87,17 @@ body {
         </div>
         <div class="main">
           <h2>About Me</h2>
-          <p>I'm a web and software developer from Calgary, Alberta and this is my resume.</p>
+          <p>I'm a frontend software developer and techie currently based in Calgary, Alberta.  My educational background is in physics and computational mathematics while my practical experience (both personal and professional) is in mostly frontend and web development. In my spare time you might find me on skis or a bicycle somewhere in the mountains, lifting heavy things in the gym or playing with my dog.
+          <p>Click the links above to view seperate sections of my CV or scroll down. In the sidebar you can find links to my relevant media.</p>
           <br>
+          <h2>Work Experience</h2>
+          <p>This is my work experience.</p>
+          <br>          
           <h2>Skills and Attributes</h2>
           <p>These are my skills.</p>
           <br>
           <h2>Projects</h2>
           <p>These are my projects.</p>
-          <br>
-          <h2>Work Experience</h2>
-          <p>This is my work experience.</p>
           <br>
           <h2>Education</h2>
           <p>This is my education.</p>
