add undergrad education and remove footer

--- a/index.html
+++ b/index.html
@@ -100,13 +100,14 @@ body {
           <p>These are my projects.</p>
           <br>
           <h2>Education</h2>
-          <p>This is my education.</p>
+          <h4>Carleton Univeristy (Ottawa ON) | Hons. B.Sc. 2018</h4>
+          <ul>
+            <li><i><b>Program: </b></i>Major in Physics (Theoretical Stream) with Minors in Computer Science and Mathematics</li>
+            <li><i><b>Courses: </b></i>software engineering, systems design, logic theory, computer vision, algorithms and data structures, mechanics & dynamics, general relativity, electromagnetism, optics, thermodynamics, quantum mechanics and theory, calculus, linear algebra, discrete math, laboratories</li>
+            <li><i><b>Projects: </b></i>PhysPi Environmental Monitoring System (Undergraduate Honours 4th Year Project)</li>
+          </ul>
           <br>
         </div>
-      </div>
-
-      <div class="footer">
-        <h2>Footer</h2>
       </div>
 </body>
 </html>
