add websites info

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@ body {
           <h2>Keegan Osler</h2>
           <div class="fakeimg" style="height:200px;">Image</div>
           <h3>Quick Links</h3>
-          <p>Website: </p>
-          <p>Github: </p>
+          <p>Website: <a href="https://keeganosler.github.io"></a></p>
+          <p>Github: <a href=""></a></p>
           <p>LinkedIn: </p>
         </div>
         <div class="main">
           <h2>About Me</h2>
-          <p>I'm a frontend software developer and techie currently based in Calgary, Alberta.  My educational background is in physics and computational mathematics while my practical experience (both personal and professional) is in mostly frontend and web development. In my spare time you might find me on skis or a bicycle somewhere in the mountains, lifting heavy things in the gym or playing with my dog.
+          <p>I'm a frontend software developer and techie currently based in Calgary, Alberta.  I have strong skills in HTML, Javascript and CSS and I am very experienced in Angular. Additionally, I have strong skills and relevant experience in backend languages such as Python, Golang and C# as well as a deep understanding of data structures and algorithms.  In my spare time you might find me on skis or a bicycle somewhere in the mountains, lifting heavy things in the gym or playing with my dog.
           <p>Click the links above to view seperate sections of my CV or scroll down. In the sidebar you can find links to my relevant media.</p>
           <br>
           <h2>Work Experience</h2>
