reorganize and ditch old stuff

--- a/index.html
+++ b/index.html
@@ -1,113 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Keegan Osler Resume</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-.navbar a:hover {
-  background-color: #1abc9c;
-  color: white;
-}
-
-/* Column container */
-.row {  
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-}
-
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  -ms-flex: 20%; /* IE10 */
-  flex: 20%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Main column */
-.main {   
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: black;
-}
-
-</style>
-</head>
-<body>
-
+  <head>
+    <title>Keegan Osler Resume</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
+  </head>
+  <body>
     <div class="navbar">
-        <a href="#">About Me</a>
-        <a href="#">Skills and Attributes</a>
-        <a href="#">Projects</a>
-        <a href="#">Work Experience</a>
-        <a href="#">Education</a>
+      <a href="#">About Me</a>
+      <a href="#">Skills and Attributes</a>
+      <a href="#">Projects</a>
+      <a href="#">Work Experience</a>
+      <a href="#">Education</a>
     </div>
-
     <div class="row">
-        <div class="side">
-          <h2>Keegan Osler</h2>
-          <div class="fakeimg" style="height:200px;">Image</div>
-          <h3>Quick Links</h3>
-          <p>Website: <a href="https://keeganosler.github.io"></a></p>
-          <p>Github: <a href=""></a></p>
-          <p>LinkedIn: </p>
-        </div>
-        <div class="main">
-          <h2>About Me</h2>
-          <p>I'm a frontend software developer and techie currently based in Calgary, Alberta.  I have strong skills in HTML, Javascript and CSS and I am very experienced in Angular. Additionally, I have strong skills and relevant experience in backend languages such as Python, Golang and C# as well as a deep understanding of data structures and algorithms.  In my spare time you might find me on skis or a bicycle somewhere in the mountains, lifting heavy things in the gym or playing with my dog.
-          <p>Click the links above to view seperate sections of my CV or scroll down. In the sidebar you can find links to my relevant media.</p>
-          <br>
-          <h2>Work Experience</h2>
-          <p>This is my work experience.</p>
-          <br>          
-          <h2>Skills and Attributes</h2>
-          <p>These are my skills.</p>
-          <br>
-          <h2>Projects</h2>
-          <p>These are my projects.</p>
-          <br>
-          <h2>Education</h2>
-          <h4>Carleton Univeristy (Ottawa ON) | Hons. B.Sc. 2018</h4>
-          <ul>
-            <li><i><b>Program: </b></i>Major in Physics (Theoretical Stream) with Minors in Computer Science and Mathematics</li>
-            <li><i><b>Courses: </b></i>software engineering, systems design, logic theory, computer vision, algorithms and data structures, mechanics & dynamics, general relativity, electromagnetism, optics, thermodynamics, quantum mechanics and theory, calculus, linear algebra, discrete math, laboratories</li>
-            <li><i><b>Projects: </b></i>PhysPi Environmental Monitoring System (Undergraduate Honours 4th Year Project)</li>
-          </ul>
-          <br>
-        </div>
+      <div class="side">
+        <h2>Keegan Osler</h2>
+        <div class="fakeimg" style="height: 200px">Image</div>
+        <h3>Quick Links</h3>
+        <p>Website: <a href="https://keeganosler.github.io"></a></p>
+        <p>Github: <a href=""></a></p>
+        <p>LinkedIn:</p>
       </div>
-</body>
+      <div class="main">
+        <h2>About Me</h2>
+        <p>
+          I'm a frontend software developer and techie currently based in
+          Calgary, Alberta. I have strong skills in HTML, Javascript and CSS and
+          I am very experienced in Angular. Additionally, I have strong skills
+          and relevant experience in backend languages such as Python, Golang
+          and C# as well as a deep understanding of data structures and
+          algorithms. In my spare time you might find me on skis or a bicycle
+          somewhere in the mountains, lifting heavy things in the gym or playing
+          with my dog.
+        </p>
+        <p>
+          Click the links above to view seperate sections of my CV or scroll
+          down. In the sidebar you can find links to my relevant media.
+        </p>
+        <br />
+        <h2>Work Experience</h2>
+        <p>This is my work experience.</p>
+        <br />
+        <h2>Skills and Attributes</h2>
+        <p>These are my skills.</p>
+        <br />
+        <h2>Projects</h2>
+        <p>These are my projects.</p>
+        <br />
+        <h2>Education</h2>
+        <h4>Carleton Univeristy (Ottawa ON) | Hons. B.Sc. 2018</h4>
+        <ul>
+          <li>
+            <i><b>Program: </b></i>Major in Physics (Theoretical Stream) with
+            Minors in Computer Science and Mathematics
+          </li>
+          <li>
+            <i><b>Courses: </b></i>software engineering, systems design, logic
+            theory, computer vision, algorithms and data structures, mechanics &
+            dynamics, general relativity, electromagnetism, optics,
+            thermodynamics, quantum mechanics and theory, calculus, linear
+            algebra, discrete math, laboratories
+          </li>
+          <li>
+            <i><b>Projects: </b></i>PhysPi Environmental Monitoring System
+            (Undergraduate Honours 4th Year Project)
+          </li>
+        </ul>
+        <br />
+      </div>
+    </div>
+  </body>
 </html>
