--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div class="side">
-        <h2>Keegan Osler</h2>
+        <h1>Keegan Osler</h1>
         <div class="fakeimg" style="height: 200px">Image</div>
         <h3>Quick Links</h3>
         <p>Website: <a href="https://keeganosler.github.io"></a></p>
@@ -50,7 +50,7 @@
         <p>These are my projects.</p>
         <br />
         <h2>Education</h2>
-        <h4>Carleton Univeristy (Ottawa ON) | Hons. B.Sc. 2018</h4>
+        <h4>Carleton University (Ottawa ON) | Hons. B.Sc. 2018</h4>
         <ul>
           <li>
             <i><b>Program: </b></i>Major in Physics (Theoretical Stream) with
