build out header

--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div class="navbar">
+    <div class="header">
+      <h1>Keegan Osler</h1>
+      <p>Frontend software and web developer</p>
+      <div class="icon-group">
+        <button class="icon" title="Visit my Github">
+          <a href="https:/github.com/keeganosler"
+            ><i class="fa fa-github-square"></i
+          ></a>
+        </button>
+        <button class="icon" title="Visit my LinkedIn">
+          <a href="https://www.linkedin.com/in/keegan-osler-63a559177"
+            ><i class="fa fa-linkedin"></i
+          ></a>
+        </button>
+        <button class="icon" title="Export this resume as a PDF">
+          <a href=""><i class="fa fa-download"></i></a>
+        </button>
+      </div>
+    </div>
+    <!-- <div class="navbar">
       <a href="#">About Me</a>
       <a href="#">Skills and Attributes</a>
       <a href="#">Projects</a>
@@ -70,6 +95,6 @@
         </ul>
         <br />
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
