build out navbar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
         </button>
       </div>
     </div>
+    <div class="navbar">
+      <div class="nav-item">
+        <a href="">About Me</a>
+      </div>
+      <div class="nav-item">
+        <a href="">Skills</a>
+      </div>
+      <div class="nav-item">
+        <a href="">Experience</a>
+      </div>
+      <div class="nav-item">
+        <a href="">Projects</a>
+      </div>
+      <div class="nav-item">
+        <a href="">Education</a>
+      </div>
+    </div>
     <!-- <div class="navbar">
       <a href="#">About Me</a>
       <a href="#">Skills and Attributes</a>
