layout and color scheme

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </button>
       </div>
     </div>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
       <div class="nav-item">
         <a href="">About Me</a>
       </div>
@@ -47,6 +47,129 @@
       </div>
       <div class="nav-item">
         <a href="">Education</a>
+      </div>
+    </div>
+    <div class="content">
+      <div class="side">
+        <h2>Skills at a Glance</h2>
+        <div class="short-section">
+          <h3>Frontend Technologies</h3>
+          <p>Item 1</p>
+          <p>Item 1</p>
+          <p>Item 1</p>
+          <p>Item 1</p>
+        </div>
+        <div class="short-section">
+          <h3>Web Technologoes</h3>
+          <p>Item 1</p>
+          <p>Item 1</p>
+          <p>Item 1</p>
+          <p>Item 1</p>
+        </div>
+        <div class="short-section">
+          <h3>Other technologies and languages</h3>
+          <p>Item 1</p>
+          <p>Item 1</p>
+          <p>Item 1</p>
+          <p>Item 1</p>
+        </div>
+      </div>
+      <div class="main">
+        <div class="long-section">
+          <h2>About Me</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            porttitor blandit arcu, eget laoreet velit posuere sit amet. Ut ut
+            urna justo. Aenean et massa eget nulla facilisis ultrices sed et
+            lorem. Ut vestibulum, dolor id semper sagittis, felis nibh aliquet
+            nisl, eu rhoncus magna sapien vitae augue. Pellentesque ut velit
+            elit. Nulla imperdiet vitae urna nec dictum. Ut accumsan gravida
+            tortor. Donec eget risus odio. Donec est tellus, elementum non
+            viverra non, tincidunt a mauris. Phasellus vitae est eu diam
+            efficitur porttitor. Quisque in lorem finibus, consectetur dui eget,
+            viverra diam. Nam a metus ac nunc malesuada mollis vitae sed ante.
+            Vivamus venenatis elit quis placerat tincidunt. Donec commodo, nisi
+            sit amet volutpat dignissim, velit ante tempus arcu, in hendrerit
+            neque turpis commodo orci. Maecenas leo tellus, mattis et urna in,
+            tincidunt aliquam eros.
+          </p>
+        </div>
+        <div class="long-section">
+          <h2>Work Experience</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            porttitor blandit arcu, eget laoreet velit posuere sit amet. Ut ut
+            urna justo. Aenean et massa eget nulla facilisis ultrices sed et
+            lorem. Ut vestibulum, dolor id semper sagittis, felis nibh aliquet
+            nisl, eu rhoncus magna sapien vitae augue. Pellentesque ut velit
+            elit. Nulla imperdiet vitae urna nec dictum. Ut accumsan gravida
+            tortor. Donec eget risus odio. Donec est tellus, elementum non
+            viverra non, tincidunt a mauris. Phasellus vitae est eu diam
+            efficitur porttitor. Quisque in lorem finibus, consectetur dui eget,
+            viverra diam. Nam a metus ac nunc malesuada mollis vitae sed ante.
+            Vivamus venenatis elit quis placerat tincidunt. Donec commodo, nisi
+            sit amet volutpat dignissim, velit ante tempus arcu, in hendrerit
+            neque turpis commodo orci. Maecenas leo tellus, mattis et urna in,
+            tincidunt aliquam eros.
+          </p>
+        </div>
+        <div class="long-section">
+          <h2>Projects</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            porttitor blandit arcu, eget laoreet velit posuere sit amet. Ut ut
+            urna justo. Aenean et massa eget nulla facilisis ultrices sed et
+            lorem. Ut vestibulum, dolor id semper sagittis, felis nibh aliquet
+            nisl, eu rhoncus magna sapien vitae augue. Pellentesque ut velit
+            elit. Nulla imperdiet vitae urna nec dictum. Ut accumsan gravida
+            tortor. Donec eget risus odio. Donec est tellus, elementum non
+            viverra non, tincidunt a mauris. Phasellus vitae est eu diam
+            efficitur porttitor. Quisque in lorem finibus, consectetur dui eget,
+            viverra diam. Nam a metus ac nunc malesuada mollis vitae sed ante.
+            Vivamus venenatis elit quis placerat tincidunt. Donec commodo, nisi
+            sit amet volutpat dignissim, velit ante tempus arcu, in hendrerit
+            neque turpis commodo orci. Maecenas leo tellus, mattis et urna in,
+            tincidunt aliquam eros.
+          </p>
+        </div>
+        <div class="long-section">
+          <h2>Skills and Attributes</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            porttitor blandit arcu, eget laoreet velit posuere sit amet. Ut ut
+            urna justo. Aenean et massa eget nulla facilisis ultrices sed et
+            lorem. Ut vestibulum, dolor id semper sagittis, felis nibh aliquet
+            nisl, eu rhoncus magna sapien vitae augue. Pellentesque ut velit
+            elit. Nulla imperdiet vitae urna nec dictum. Ut accumsan gravida
+            tortor. Donec eget risus odio. Donec est tellus, elementum non
+            viverra non, tincidunt a mauris. Phasellus vitae est eu diam
+            efficitur porttitor. Quisque in lorem finibus, consectetur dui eget,
+            viverra diam. Nam a metus ac nunc malesuada mollis vitae sed ante.
+            Vivamus venenatis elit quis placerat tincidunt. Donec commodo, nisi
+            sit amet volutpat dignissim, velit ante tempus arcu, in hendrerit
+            neque turpis commodo orci. Maecenas leo tellus, mattis et urna in,
+            tincidunt aliquam eros.
+          </p>
+        </div>
+        <div class="long-section">
+          <h2>Education</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            porttitor blandit arcu, eget laoreet velit posuere sit amet. Ut ut
+            urna justo. Aenean et massa eget nulla facilisis ultrices sed et
+            lorem. Ut vestibulum, dolor id semper sagittis, felis nibh aliquet
+            nisl, eu rhoncus magna sapien vitae augue. Pellentesque ut velit
+            elit. Nulla imperdiet vitae urna nec dictum. Ut accumsan gravida
+            tortor. Donec eget risus odio. Donec est tellus, elementum non
+            viverra non, tincidunt a mauris. Phasellus vitae est eu diam
+            efficitur porttitor. Quisque in lorem finibus, consectetur dui eget,
+            viverra diam. Nam a metus ac nunc malesuada mollis vitae sed ante.
+            Vivamus venenatis elit quis placerat tincidunt. Donec commodo, nisi
+            sit amet volutpat dignissim, velit ante tempus arcu, in hendrerit
+            neque turpis commodo orci. Maecenas leo tellus, mattis et urna in,
+            tincidunt aliquam eros.
+          </p>
+        </div>
       </div>
     </div>
     <!-- <div class="navbar">
@@ -113,5 +236,24 @@
         <br />
       </div>
     </div> -->
+    <script>
+      var nav = document.getElementById("navbar");
+      var navPos = nav.offsetTop;
+      console.log("navpos: ", navPos);
+      window.onscroll = function () {
+        console.log(window.scrollY);
+        if (window.scrollY > navPos) {
+          if (nav.style.position !== "fixed") {
+            nav.style.position = "fixed";
+            nav.style.top = 0;
+          }
+        } else {
+          if (nav.style.position === "fixed") {
+            nav.style.position = "";
+            nav.style.top = 105;
+          }
+        }
+      };
+    </script>
   </body>
 </html>
