start circles for skill levels

--- a/index.html
+++ b/index.html
@@ -54,10 +54,28 @@
         <h2>Skills at a Glance</h2>
         <div class="short-section">
           <h3>Frontend Technologies</h3>
+          <!-- <p>Item 1</p>
           <p>Item 1</p>
           <p>Item 1</p>
-          <p>Item 1</p>
-          <p>Item 1</p>
+          <p>Item 1</p> -->
+          <div class="skill-level">
+            <p>Angular</p>
+            <div class="circles">
+              <div class="circle-filled"></div>
+              <div class="circle-filled"></div>
+              <div class="circle-filled"></div>
+              <div class="circle-filled"></div>
+              <div class="circle-filled"></div>
+            </div>
+          </div>
+          <div class="skill-level">
+            <p>React</p>
+            <div class="circle-filled"></div>
+            <div class="circle-filled"></div>
+            <div class="circle-filled"></div>
+            <div class="circle-empty"></div>
+            <div class="circle-empty"></div>
+          </div>
         </div>
         <div class="short-section">
           <h3>Web Technologoes</h3>
