circles and typos

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="short-section">
-          <h3>Web Technologoes</h3>
+          <h3>Web Technologies</h3>
           <p>Item 1</p>
           <p>Item 1</p>
           <p>Item 1</p>
